Add deep querying
Imagine that you have a model like:
{
  user: '56d4cfc59d35c0ad3d8ac459',
  price: 10000,
  ...
}
Somethings you want to query a model but using the attributes of another
model (like User in the example above). So now It's possible to do it.

--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
 	}, {
 		"name": "Andres Herrera",
 		"email": "andres.herrera@gmail.com"
+	},{
+		"name": "Sebastian Vizcaino",
+		"email": "elvizcacho@gmail.com"
 	}],
 	"dependencies": {
 		"express": "^4.12.2",
-		"mongoose": ""
+		"mongoose": "",
+		"async": "1.5.0"
 	},
 	"devDependencies": {
 		"supertest": "~0.12.0"
